# 2022-FEUP-AED-Proj1

./: .gitignore  CMakeLists.txt  Logs.txt  students_classes.csv
csv/: students_classes.csv
docs/: Doxyfile
src/: Block.cpp  Block.h  Class.cpp  Class.h  Helpy.cpp  Helpy.h  Request.cpp  Request.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  UC.cpp  UC.h  main.cpp  proj  student.cpp  student.h
